--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Topic Proposal/~$pic Proposal \[Outline\].docx
 Data Dump/~$Notes.docx
 *.tmp
 
+Data Dump/~$sources.docx
+Topic Proposal/~$pic Proposal \[Draft1\].docx
+Topic Proposal/~$pic Proposal \[Template\].docx
