--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Data Dump/~$Notes.docx
 Data Dump/~$sources.docx
 Topic Proposal/~$pic Proposal \[Draft1\].docx
 Topic Proposal/~$pic Proposal \[Template\].docx
+Topic Proposal/~$pic Proposal \[Draft1 - w edits\].docx
+Topic Proposal/~$pic Proposal \[Draft2 - w edits\].docx
+Topic Proposal/~$pic Proposal \[Draft3\].docx
