--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Topic Proposal/~$pic Proposal \[Template\].docx
 Topic Proposal/~$pic Proposal \[Draft1 - w edits\].docx
 Topic Proposal/~$pic Proposal \[Draft2 - w edits\].docx
 Topic Proposal/~$pic Proposal \[Draft3\].docx
+Topic Proposal/Final/~$pic Proposal \[Final\].docx
