Updated NB code and READMEs
Updated NB code
KNN draft 1 is complete, but is still computing so I can not download the code yet. However, the link to the online version is added to the README file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Topic Proposal/~$pic Proposal \[Draft1 - w edits\].docx
 Topic Proposal/~$pic Proposal \[Draft2 - w edits\].docx
 Topic Proposal/~$pic Proposal \[Draft3\].docx
 Topic Proposal/Final/~$pic Proposal \[Final\].docx
+Code/scratch.py
