--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Topic Proposal/~$pic Proposal \[Draft3\].docx
 Topic Proposal/Final/~$pic Proposal \[Final\].docx
 Code/scratch.py
 Code/dt_stats.txt
+Data Dump/~$taDumpNotes.docx
