--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ Topic Proposal/Final/~$pic Proposal \[Final\].docx
 Code/scratch.py
 Code/dt_stats.txt
 Data Dump/~$taDumpNotes.docx
+scratch.txt
+Data Dump/~$tesRevised.docx
+Project Report/~$oject Outline \[Draft 3\].docx
+Project Report/~$oject Report \[Draft 1\].docx
