--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ scratch.txt
 Data Dump/~$tesRevised.docx
 Project Report/~$oject Outline \[Draft 3\].docx
 Project Report/~$oject Report \[Draft 1\].docx
+Project Report/analytics.txt
