Draft 1 of Methods Completed
Draft 1 of Methods Completed
Beginning Algorithms Section Now

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Data Dump/~$tesRevised.docx
 Project Report/~$oject Outline \[Draft 3\].docx
 Project Report/~$oject Report \[Draft 1\].docx
 Project Report/analytics.txt
+Code/example_data.csv
