--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Project Report/~$oject Outline \[Draft 3\].docx
 Project Report/~$oject Report \[Draft 1\].docx
 Project Report/analytics.txt
 Code/example_data.csv
+Data Dump/~$tro_rob.docx
+Data Dump/~$oject Report \[Draft Rob\]_RobCopy.docx
